--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -3,11 +3,11 @@ header{
     align-items: center;
     gap: 15px;
     padding: 10px;
-    background-color: #303030;   
+    background-color: #1d1d1d;   
     color: white;
 }
 *{
-    font-family: "Quicksand", sans-serif;
+    font-family: "Share Tech", sans-serif;
     font-optical-sizing: auto;
     font-weight: 100;
     font-style: normal;
