--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
+@import 'bootstrap/scss/bootstrap';
 body{
-    background-color: #303030;
+    background-color: #1d1d1d;
 }
-app-root{
-    background-color: #303030;
-}
+/* Importing Bootstrap SCSS file. */
